[tool.poetry]
name = "nonebot_plugin_imageutils"
version = "0.1.17"
description = "Nonebot2 PIL工具插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-imageutils"
repository = "https://github.com/noneplugin/nonebot-plugin-imageutils"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {version = "^2.0.0-rc.1", extras = ["fastapi"], optional = true}
loguru = "^0.6.0"
fonttools = "^4.0.0"
Pillow = "^9.0.0"
httpx = ">=0.19.0"
numpy = "^1.20.0"
opencv-python-headless = "^4.0.0"
bbcode = "^1.1.0"
matplotlib = "^3.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^1.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
